# pdf2md-claude

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml
pdf2md_claude/: __init__.py  __main__.py  claude_api.py  cli.py  client.py  converter.py  formatter.py  images.py  markers.py  merger.py  models.py  pipeline.py  prompt.py  rules.py  table_fixer.py  validator.py  workdir.py
samples/: docling.md  multi_page_table.md
samples/chineese/: .pdf2md.rules
samples/other/: docling.md
scripts/: setup-dev.sh
tests/: __init__.py  conftest.py  test_claude_api.py  test_cli.py  test_converter.py  test_formatter.py  test_images.py  test_markers.py  test_models.py  test_pipeline.py  test_rules.py  test_table_fixer.py  test_table_merger.py  test_validator.py  test_workdir.py
